<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
...
    <string name="cancel_button">Cancel</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="menu_item_move_down">Move down</string>
    <string name="menu_item_move_up">Move up</string>
    <string name="menu_item_move_to_top">Move to top</string>
    <string name="menu_item_move_to_bottom">Move to bottom</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copy">Copy</string>
...
    <string name="background">Background</string>
    <string name="stage">Stage</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
...
    <string name="dialog_confirm_delete_look_title">Delete this Look?</string>
    <string name="dialog_confirm_delete_multiple_looks_title">Delete these Looks?</string>
    <string name="dialog_confirm_delete_look_message">This cannot be undone!</string>
    <string name="lookname">Look name:</string>
    <string name="backpack_replace_look">The look "%1$s" already exists in the backpack. Do you want to replace it?</string>
...
    <string name="dialog_confirm_delete_sound_title">Delete this Sound?</string>
    <string name="dialog_confirm_delete_multiple_sounds_title">Delete these Sounds?</string>
    <string name="dialog_confirm_delete_sound_message">This cannot be undone!</string>
    <string name="sound_name">Sound name:</string>
    <string name="new_sound_name">Sound name:</string>
...
    <string name="brick_context_dialog_move_brick">Move Brick</string>
    <string name="brick_context_dialog_show_source">Show Source Brick</string>
    <string name="brick_context_dialog_delete_brick">Delete Brick</string>
    <string name="brick_context_dialog_copy_brick">Copy Brick</string>
    <string name="brick_context_dialog_animate_bricks">Animate Brick-Parts</string>
...

    <!-- New project dialog -->
    <string name="new_project_dialog_title">New Program</string>
    <string name="new_project_dialog_hint">My Program</string>
    <string name="new_project_description_dialog_hint">My description</string>
...
    <string name="new_project_default">Create example Program</string>
    <string name="new_project_default_drone">Create example Drone Program</string>
    <string name="project_orientation_title">Orientation:</string>
    <!--  -->

...

    <!-- Control bricks -->
    <string name="brick_when_started">When program started</string>
    <string name="brick_when">When tapped</string>
    <string name="brick_wait">Wait</string>
...
    <string name="brick_if_begin">If</string>
    <string name="brick_if_begin_second_part">is true then</string>
    <string name="brick_if_else">Else</string>
    <string name="brick_if_end">End If</string>
    <string name="brick_broadcast_invalid_symbol">"Message reserved for:\n\"When physical collision between\"-Brick\nPlease try again!"</string>
    <string name="brick_set_variable">Set variable</string>
...

    <!-- sensor -->
    <string name="brick_phiro_sensor_begin">If Phiro</string>
    <string name="brick_phiro_sensor_second_part">is activated</string>

...

    <!-- Phiro sensor strings -->
    <string name="phiro_sensor_front_left">Front Left Sensor</string>
    <string name="phiro_sensor_front_right">Front Right Sensor</string>
    <string name="phiro_sensor_side_left">Side Left Sensor</string>
    <string name="phiro_sensor_side_right">Side Right Sensor</string>
    <string name="phiro_sensor_bottom_left">Bottom Left Sensor</string>
    <string name="phiro_sensor_bottom_right">Bottom Right Sensor</string>
    <!--  -->

...
