...
           android:id="@+id/brick_phiro_sensor_label"
           style="@style/BrickText.SingleLine"
           android:text="@string/brick_phiro_sensor_begin" >
        </TextView >

        <Spinner
            android:id="@+id/brick_phiro_sensor_action_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="locale"
            android:clickable="false"
            android:focusable="false" >

...
